fix automator scrollbar overlapping modals

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -4564,7 +4564,7 @@ screen and (max-width: 480px) {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 5;
+  z-index: 7;
   display: inline-block;
 }
 
